<resources>
    <string name="app_name">TheFather</string>
    <string name="title_activity_add_menschen">AddMenschenActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_car_editor_page">CarEditorPage</string>
    <string name="bitte_eingeben">Bitte eingeben</string>
    <string name="hersteller">Hersteller :</string>
    <string name="model">Model:</string>
    <string name="baujahr">Baujahr:</string>
    <string name="ps">PS:</string>
    <string name="typ">Typ:</string>
    <string name="kilometer">Kilometer:</string>
    <string name="keufpreis">Keufpreis:</string>
    <string name="last_serves">Last Serves:</string>
    <string name="tt_mm_jjjj">TT.MM.JJJJ</string>
</resources>