<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AddCarsActivity"
    android:fitsSystemWindows="true"
>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true">


        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_android" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextPersonName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/hersteller" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/bitte_eingeben"
                    android:inputType="textPersonName"
                    android:text="" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextPersonName3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/model" />

                <EditText
                    android:id="@+id/editTextTextPersonName4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/bitte_eingeben"
                    android:inputType="textPersonName"
                    android:text="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextPersonName5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/baujahr" />

                <EditText
                    android:id="@+id/editTextTextPersonName6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/bitte_eingeben"
                    android:inputType="textPersonName"
                    android:text="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextPersonName7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/ps" />

                <EditText
                    android:id="@+id/editTextTextPersonName8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/bitte_eingeben"
                    android:inputType="textPersonName"
                    android:text="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextPersonName9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/typ" />

                <EditText
                    android:id="@+id/editTextTextPersonName10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/bitte_eingeben"
                    android:inputType="textPersonName"
                    android:text="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextPersonName11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/kilometer" />

                <EditText
                    android:id="@+id/editTextTextPersonName12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/bitte_eingeben"
                    android:inputType="textPersonName"
                    android:text="" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextPersonName13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/keufpreis" />

                <EditText
                    android:id="@+id/editTextTextPersonName14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/bitte_eingeben"
                    android:inputType="textPersonName"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ExtraText">

                <EditText
                    android:id="@+id/editTextTextPersonName15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/last_serves" />

                <EditText
                    android:id="@+id/editTextTextPersonName16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:ems="10"
                    android:hint="@string/tt_mm_jjjj" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </TableLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal"/>

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Add" />
    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>